--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,87 @@
 			<artifactId>junit</artifactId>
 			<version>4.7</version>
 			<scope>test</scope>
-		</dependency>        
+		</dependency>       
+		<!-- mybatis 추가 -->
+<dependency> 
+<groupId>org.mybatis</groupId>
+<artifactId>mybatis</artifactId> 
+<version>3.4.1</version> 
+</dependency>
+<!-- mybatis-spring 추가 -->
+<dependency> 
+<groupId>org.mybatis</groupId> 
+<artifactId>mybatis-spring</artifactId> 
+<version>1.3.0</version>
+</dependency>
+<!-- mysql-connector-java 추가 -->
+<dependency><groupId>mysql</groupId> 
+<artifactId>mysql-connector-java</artifactId> 
+<version>8.0.11</version> 
+</dependency>
+<!-- 여기서 버전 8.0.11은 해당 버전에 따라 바꿔야 한다. -->
+<!-- spring-jdbc 추가 -->
+
+<!--스프링시큐리티 web 라이브러리-->
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-web</artifactId>
+    <version>4.1.0.RELEASE</version>
+</dependency>
+  <!--스프링시큐리티 core 라이브러리-->
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-core</artifactId>
+    <version>4.1.0.RELEASE</version>
+</dependency>
+  <!--스프링시큐리티 config 라이브러리-->
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-config</artifactId>
+    <version>4.1.0.RELEASE</version>
+</dependency>
+<!-- pom.xml -->
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-context-support</artifactId>
+    <version>${org.springframework-version}</version>
+</dependency>
+<dependency>
+    <groupId>javax.mail</groupId>
+    <artifactId>mail</artifactId>
+    <version>1.4.3</version>
+</dependency>
+<!-- json 사용 라이브러리 -->
+<dependency>
+    <groupId>org.codehaus.jackson</groupId>
+    <artifactId>jackson-mapper-asl</artifactId>
+    <version>1.9.13</version>
+</dependency>
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.8.7</version>
+</dependency>
+<dependency> 
+<groupId>org.springframework</groupId> 
+<artifactId>spring-jdbc</artifactId> 
+<version>${org.springframework-version}</version> 
+</dependency>
+<!-- 이미지 업로드 -->
+<!-- https://mvnrepository.com/artifact/org.imgscalr/imgscalr-lib-->		
+<dependency>
+	<groupId>org.imgscalr</groupId>
+	<artifactId>imgscalr-lib</artifactId>
+	<version>4.2</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+<dependency>
+	<groupId>commons-fileupload</groupId>
+	<artifactId>commons-fileupload</artifactId>
+	<version>1.3.2</version>
+</dependency>
+
+
 	</dependencies>
     <build>
         <plugins>
